# advent-of-code-2018

day1/: solve.hs
day2/: d2.cabal  solve.hs
