name:                d2
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Bruno Bieth
maintainer:          biethb@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  -- other-modules:
  -- other-extensions:
  build-depends:       combinatorial, base >=4.11 && <4.12                      
  -- hs-source-dirs:
  default-language:    Haskell2010
